Fix #661 - Dropdown menu cropped in Hourglass chart

--- a/themes/_common/css-2.0.0/style.css
+++ b/themes/_common/css-2.0.0/style.css
@@ -392,7 +392,7 @@
 	z-index: 9999;
 }
 
-.wt-pedigree-chart  {
+.wt-pedigree-chart, .wt-hourglass-chart {
     overflow-x: visible;
     overflow-y: visible;
 }
